--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="inicio.html">
@@ -33,6 +34,13 @@
             </div>
         </div>
     </header>
+
+    <div class="container mt-3">
+        <button id="btnVoltar" onclick="window.location.href='contatos.html'">
+            ← Voltar
+        </button>
+    </div>
+
     <div class="chat-container">
         <div class="chat-header">
             <div>
@@ -46,7 +54,6 @@
             <div class="actions">
                 <button id="btnBloquear" class="btn btn-warning btn-sm">Bloquear</button>
                 <button id="btnProposta" class="btn btn-warning btn-sm">Informar Valor</button>
-                <button id="btnVoltar" class="btn btn-warning btn-sm">Voltar</button>
             </div>
         </div>
 
@@ -59,6 +66,7 @@
             <button id="btnEnviar" class="btn btn-warning">Enviar</button>
         </div>
     </div>
+
     <footer class="footer pt-5 mt-5">
         <div class="container footer-top d-flex flex-wrap justify-content-between pb-4">
 
@@ -70,11 +78,11 @@
             <div class="footer-section mb-3">
                 <h5>Links Úteis</h5>
                 <ul class="list-unstyled small">
-                    <li><a href="#">Fale Conosco</a></li>
-                    <li><a href="#">Suporte</a></li>
-                    <li><a href="#">Denúncias</a></li>
-                    <li><a href="#">Termos de Uso</a></li>
-                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="./footer pages/faleConosco.html">Fale Conosco</a></li>
+                    <li><a href="./footer pages/suporte.html">Suporte</a></li>
+                    <li><a href="./footer pages/denuncias.html">Denúncias</a></li>
+                    <li><a href="./footer pages/termos.html">Termos de Uso</a></li>
+                    <li><a href="./footer pages/privacidade.html">Política de Privacidade</a></li>
                 </ul>
             </div>
 
