--- a/src/main/resources/static/favoritos.html
+++ b/src/main/resources/static/favoritos.html
@@ -50,12 +50,12 @@
                 </div>
                 <div class="col-md">
                     <h5>Links Úteis</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Fale Conosco</a></li>
-                        <li><a href="#" class="text-white">Suporte</a></li>
-                        <li><a href="#" class="text-white">Denúncias</a></li>
-                        <li><a href="#" class="text-white">Termos de Uso</a></li>
-                        <li><a href="#" class="text-white">Política de Privacidade</a></li>
+                    <ul class="list-unstyled small">
+                        <li><a href="./footer pages/faleConosco.html">Fale Conosco</a></li>
+                        <li><a href="./footer pages/suporte.html">Suporte</a></li>
+                        <li><a href="./footer pages/denuncias.html">Denúncias</a></li>
+                        <li><a href="./footer pages/termos.html">Termos de Uso</a></li>
+                    <li><a href="./footer pages/privacidade.html">Política de Privacidade</a></li>
                     </ul>
                 </div>
                 <div class="col-md">
