--- a/src/main/resources/static/meusItens.html
+++ b/src/main/resources/static/meusItens.html
@@ -369,12 +369,13 @@
 
       <div class="footer-section">
         <h3>Links Úteis</h3>
-        <ul>
-          <li><a href="#">Fale Conosco</a></li>
-          <li><a href="#">Suporte</a></li>
-          <li><a href="#">Denúncias</a></li>
-          <li><a href="#">Termos de Uso</a></li>
-          <li><a href="#">Política de Privacidade</a></li>
+        <ul class="list-unstyled small">
+          <li><a href="./footer pages/faleConosco.html">Fale Conosco</a></li>
+          <li><a href="./footer pages/suporte.html">Suporte</a></li>
+          <li><a href="./footer pages/denuncias.html">Denúncias</a></li>
+          <li><a href="./footer pages/termos.html">Termos de Uso</a></li>
+                              <li><a href="./footer pages/privacidade.html">Política de Privacidade</a></li>
+
         </ul>
       </div>
 
